java 8 source support (#103)
- set versions 1.8 - 8 for maven compiler plugin
- update to jmockit 1.5
- add specific options to run jmockit
  - --add-reads java.base=java.logging does it.